Updates to paper structure and figures

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -66,6 +66,9 @@ all_arxiv_results <-
   all_arxiv_results %>% 
   mutate(submitted = as_date(submitted),
          updated = as_date(updated))
+
+cbPalette <- c("#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7")
+
 ```
 
 
@@ -131,7 +134,7 @@ The result of this process is a dataset indicating the presence of open data or 
 Although SocArXiv's metadata contained author-reported information concerning data and code availability for each pre-print, we elected to use the results of the ODDPub algorithm in our analysis to ensure comparability of results between pre-prints from all repositories. 
 <!-- Notable discrepancies between the ODDPub algorithm and authors' self-reported data and code availability are documented in Appendix \@ref(socarxivissues). -->
 
-```{r monthly-papers-total, fig.cap = "Number of pre-prints related to COVID-19", out.width="90%", fig.align = "center"}
+```{r monthly-papers-total, fig.cap = "Number of pre-prints related to COVID-19 posted to arXiv (N = 4,250), bioRxiv (N = 4,146), medRxiv (N = 13,194), and SocArXiv (N = 478) per month", out.width="90%", fig.align = "center", fig.pos="H"}
 just_arxiv <- 
   all_arxiv_results  %>% 
   select(submitted) %>% 
@@ -163,20 +166,201 @@ all %>%
   ggplot(aes(x = month)) + 
   geom_histogram(aes(fill = type), stat="count", position = "dodge") + 
   labs(title = "COVID-19-related pre-prints posted per month",
-       subtitle = "Total of 4,250 relevant pre-prints on arXiv, 4,146 on bioRxiv, 13,194 on medRxiv, and \n478 on SocArXiv.",
        x = "Month",
        y = "Number of pre-prints",
        fill = "Repository") +
   scale_x_date(breaks=as.Date(c("2020-01-01","2020-07-01", "2021-01-01")),
                    labels=c("Jan 2020", "Jul 2020", "Jan 2021")) +
   theme_minimal() +
-  scale_fill_manual(values = wes_palette("Darjeeling1")) +
+  scale_fill_manual(values = cbPalette) +
   facet_wrap(~type,
              scales = "free_y")
 ```
 
 
 # Results
+
+## Pre-pandemic pre-prints
+
+To examine the influence of the COVID-19 pandemic on open science practices during the pandemic, we analyzed pre-prints posted between January and December 2019 from each of the four repositories in question. Since medRxiv was founded in June 2019, all pre-prints posted in the latter half of 2019 were analyzed (a total of 913). For all other repositories, a random sample of 1,200 was taken from all non-COVID-19-related pre-prints posted in the relevant date range.
+
+```{r 2019-results-med-arxiv, out.width="90%", fig.align='center', fig.cap = "Number of pre-prints posted per month in 2019 to arXiv (N = 150,018), bioRxiv (N = 31,752), medRxiv (N = 913), and SocArXiv (N = 1,614) per month", fig.pos="H"}
+bio_2019 <- bio_2019_results %>%
+  select(date) %>%
+  mutate(type = "bioRxiv")
+
+med_2019 <- med_2019_open_data_results %>%
+  select(date) %>%
+  mutate(type = "medRxiv")
+
+socarxiv_2019 <- socarxiv_metadata_2019 %>%
+  select(date_created) %>%
+  mutate(type = "socArXiv") %>%
+  rename(date = date_created)
+
+arxiv_2019 <- all_arxiv_2019_results %>%
+  select(submitted) %>%
+  mutate(type = "arXiv") %>%
+  rename(date = submitted)
+
+all_2019 <- rbind(arxiv_2019, bio_2019, med_2019, socarxiv_2019)
+
+all_2019 %>% 
+  mutate(month = floor_date(date, "month")) %>% 
+  # filter(year(date) >= 2020) %>% 
+  ggplot(aes(x = month, fill = type)) + 
+  geom_histogram(stat="count", position = "dodge2") +
+  labs(title = "Pre-prints posted per month, 2019",
+       x = "Month",
+       y = "Number of pre-prints",
+       fill = "Repository") +
+  theme_minimal() +
+  scale_fill_manual(values = cbPalette) +
+  facet_wrap(~type,
+             scales = "free_y") +
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
+```
+
+
+Between June and December 2019, the number of pre-prints posted to medRxiv monthly saw an overall increase, which may be expected as the repository gained recognition and popularity in the medical research community (Figure \@ref(fig:2019-results-med-arxiv)). The number of pre-prints posted monthly to bioRxiv also saw a slight overall increase throughout 2019, while the number of those posted to arXiv and SocArXiv fluctuated throughout the year (Figure \@ref(fig:2019-results-med-arxiv)). Due to its relative immaturity at the beginning of the COVID-19 pandemic, a significant portion of medRxiv's overall usage has been dedicated to COVID-19-related research. In total, 21,647 pre-prints were posted to medRxiv between June 2019 and 30 June, 2021, 13,194 of which (approximately 61 per cent) relate to COVID-19.
+
+Of the analyzed pre-prints from 2019, 93 per cent of those posted to arXiv, 63 per cent of those posted to bioRxiv, 75 per cent of those posted to medRxiv, 92 per cent of those posted to SocArXiv showed no indication of open data or open code (Table \@ref(tab:2019-published)). 
+
+```{r monthly-papers-condition-stack-2019, fig.cap = "Number of sampled pre-prints posted in 2019 from arXiv (n = 1,200), bioRxiv (n = 1,200), medRxiv (n = 913), and SocArXiv (n = 1,200) distinguished by presence of open data or code markers", out.width="90%", fig.align = "center"}
+# Number of papers for each open data/code status per month
+open_status_med_2019 <-
+  med_2019_open_data_results %>%
+  select(title, date, is_open_code, is_open_data) %>%
+  mutate(condition = is_open_data + is_open_code, repo = "medRxiv")
+
+open_status_bio_2019 <-
+  bio_2019_open_data_results %>%
+  select(title, date, is_open_code, is_open_data) %>%
+  mutate(condition = is_open_data + is_open_code, repo = "bioRxiv", date = as.character(date))
+
+open_status_arxiv_2019 <-
+  arxiv_2019_open_data_results %>%
+  select(title, submitted, is_open_code, is_open_data) %>%
+  mutate(condition = is_open_data + is_open_code, repo = "arXiv", date = as.character(submitted) %>% str_sub(end = 10)) %>%
+  select(title, date, is_open_code, is_open_data, condition, repo)
+
+open_status_socarxiv_2019 <-
+  socarxiv_2019_open_data_results %>%
+  select(title, date_created, is_open_code, is_open_data) %>%
+  mutate(condition = is_open_data + is_open_code, repo = "SocArXiv", date = as.character(date_created)) %>%
+  select(title, date, is_open_code, is_open_data, condition, repo)
+
+open_status <- rbind(open_status_med_2019, open_status_bio_2019, open_status_arxiv_2019, open_status_socarxiv_2019)
+
+open_status$date <- as.Date(open_status$date)
+open_status$condition[open_status$condition == 2] <- "Both"
+open_status$condition[open_status$condition == 0] <- "Neither"
+open_status$condition[open_status$condition == 1 & open_status$is_open_code == 1] <- "Open Code"
+open_status$condition[open_status$condition == 1 & open_status$is_open_data == 1] <- "Open Data"
+
+open_status %>%
+  ggplot() +
+  geom_bar(aes(x = factor(floor_date(date, "month")),
+              fill=factor(condition, levels = c("Neither", "Open Code", "Open Data", "Both")),
+              position = "stack")) +
+  labs(fill = "Type of marker") +
+  scale_x_discrete(breaks=c("2019-01-01","2019-07-01", "2019-12-01"),
+                   labels=c("Jan 2019", "Jul 2019", "Dec 2019")) +
+  ylab("Number of pre-prints") +
+  xlab("Month") +
+  labs(title="Sampled pre-prints by month, 2019", subtitle="Note the different y-axes.") +
+  theme_minimal() +
+  scale_fill_manual(values = cbPalette) +
+  facet_wrap(~repo,
+             scales = "free_y")
+```
+
+
+```{r 2019-published, fig.pos="H"}
+med_published_2019 <- 
+  med_2019_open_data_results %>% 
+  select(title, date, published) %>% 
+  mutate(repo = "medRxiv", published = as.numeric(published))
+
+bio_published_2019 <- 
+  bio_2019_results %>% 
+  select(title, date, published) %>% 
+  mutate(repo = "bioRxiv", published = as.numeric(!is.na(published)))
+
+socarxiv_published_2019 <- 
+  socarxiv_metadata_2019 %>% 
+  select(title, date_created, links.doi) %>% 
+  mutate(repo = "socArXiv", published = as.numeric(!is.na(links.doi))) %>%
+  rename(date = date_created) %>%
+  select(title, date, published, repo)
+
+arxiv_published_2019 <-
+  all_arxiv_2019_results %>%
+  select(title, submitted, doi) %>%
+  mutate(repo = "arXiv", published = as.numeric(!is.na(doi))) %>%
+  rename(date = submitted) %>%
+  select(title, date, published, repo)
+
+published_2019 <- rbind(med_published_2019, bio_published_2019, socarxiv_published_2019, arxiv_published_2019)
+
+published_2019 %>% 
+  group_by(repo) %>% 
+  summarise(`Published pre-prints` = sum(published), `Proportion published` = mean(published) %>% round(2)) %>%
+  kable(caption = "Counts and proportion of published COVID-19 pre-prints in each repository, 2019",
+        col.names = c("Repositiory", "Published pre-prints", "Proportion published"),
+        format.args = list(big.mark = ","))
+```
+
+
+
+```{r, 2019-open-publishing}
+med_2019_published_open_status <- 
+  med_2019_open_data_results %>% 
+  select(title, date, published, is_open_code, is_open_data) %>% 
+  mutate(condition = is_open_data + is_open_code, repo = "medRxiv")
+
+bio_2019_published_open_status <- 
+  bio_2019_open_data_results %>% 
+  select(title, date, published, is_open_code, is_open_data) %>% 
+  mutate(condition = is_open_data + is_open_code, repo = "bioRxiv")
+
+socarxiv_2019_published_open_status <- 
+  socarxiv_2019_open_data_results %>%
+  mutate(published = !is.na(links.doi) %>% as.numeric()) %>%
+  select(title, date_created, published, is_open_code, is_open_data) %>%
+  rename(date = date_created) %>%
+  mutate(condition = is_open_data + is_open_code, repo = "socArXiv")
+
+arxiv_2019_published_open_status <- 
+  arxiv_2019_open_data_results %>%
+  mutate(published = !is.na(doi) %>% as.numeric()) %>%
+  select(title, submitted, published, is_open_code, is_open_data) %>%
+  rename(date = submitted) %>%
+  mutate(condition = is_open_data + is_open_code, repo = "arXiv")
+
+published_2019_open_status <- rbind(med_2019_published_open_status, bio_2019_published_open_status, socarxiv_2019_published_open_status, arxiv_2019_published_open_status)
+
+published_2019_open_status$condition[published_2019_open_status$condition == 2] <- "Both"
+published_2019_open_status$condition[published_2019_open_status$condition == 0] <- "Neither"
+published_2019_open_status$condition[published_2019_open_status$condition == 1 & published_2019_open_status$is_open_code == 1] <- "Open code"
+published_2019_open_status$condition[published_2019_open_status$condition == 1 & published_2019_open_status$is_open_data == 1] <- "Open data"
+
+published_2019_open_status %>%
+  count(repo, published, condition) %>% 
+  pivot_wider(names_from = condition, values_from = n, values_fill = 0) %>%
+  mutate(Status = ifelse(published == 0, "Unpublished", "Published"), `Proportion with neither`= round((`Neither`)/(`Open data` + `Open code` + Both + Neither), 2)) %>%
+  select(Status, Both, Neither, `Open code`, `Open data`, `Proportion with neither`) %>%
+  kable(caption = "Counts and proportions of open data markers by whether the pre-print was published, 2019",
+        booktabs = TRUE,
+        format.args = list(big.mark = ",")) %>%
+  group_rows(index = c("arXiv" = 2, "bioRxiv" = 2, "medRxiv" = 2, "socArXiv" = 2))
+```
+
+Examining publication rates for pre-pandemic papers, we observe that 41 per cent of pre-prints posted to arXiv, 64 per cent of pre-prints posted to bioRxiv, 61 per cent of pre-prints posted to medRxiv, and 37 per cent of pre-prints posted to SocArXiv during 2019 were eventually peer reviewed and published (Table \@ref(tab:2019-published)). When disaggregated by open data and code status, we find that published and unpublished pre-prints contain open data and code markers in similar proportions (Table \@ref(tab:2019-open-publishing)).
+
+<!-- MOVE TO AFTER COVID PAPERS
+
+These rates are at least double those of the COVID-19-related pre-prints posted in each repository during 2020 and 2021. When disaggregated by open data and code status, we find that published and unpublished pre-prints contain open data and code markers in similar proportions (Table \@ref(tab:2019-open-publishing)). This mimics the behaviour of published and unpublished COVID-19-related pre-prints. -->
 
 ## All pre-prints related to COVID-19
 
@@ -222,37 +406,19 @@ all_total <-
   all %>%
   count(is_open_data, is_open_code) %>%
   mutate(prop_total = n / sum(n)) %>%
-  mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
-         is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>%
+  # mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
+  #        is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>%
   select(is_open_data, is_open_code, n, prop_total)
-```
-
-
-```{r summarycounts-repositories}
-# open data/open code count summary table
-
-all_by_type <- 
-  all %>%
-  group_by(type) %>%
-  count(is_open_data, is_open_code) %>%
-  mutate(prop_total = n / sum(n)) %>%
-  mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
-         is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>%
-  ungroup() %>%
-  select(is_open_data, is_open_code, n, prop_total) 
-
-rbind(all_total, all_by_type) %>% 
-  kable(col.names = c("Open data markers", "Open code markers", "Count", "Proportion of total"),
-        caption = "Count and proportions of open data and code markers by pre-print repository",
-        booktabs = TRUE,
-        digits = 2,
-        format.args = list(big.mark = ",")) %>%
-  group_rows(index = c("Total" = 4, "arXiv" = 4, "bioRxiv" = 4, "medRxiv" = 4, "SocArXiv" = 4))
 ```
 
 The distribution of total sampled pre-prints and sampled pre-prints with open data or code markers roughly follows that of COVID-19-related pre-prints posted in general (Figure \@ref(fig:monthly-papers-condition-stack)). The proportion of pre-prints with open data or code has fluctuated over time but shows no consistent overall increase or decrease throughout the course of the pandemic, nor in conjunction with increases or decreases in the total number of pre-prints posted to any given repository. In our datasets, very few (if any) pre-prints were sampled for the month of January 2020. None of these pre-prints contained open data or open code markers, thus the 0 per cent rate of open data and code for this month across all repositories should be considered an outlier.
 
-```{r monthly-papers-condition-stack, fig.cap = "Number of sampled pre-prints related to COVID-19, distinguished by presence of open data or code markers", out.width="90%", fig.align = "center"}
+The proportion of bioRxiv and medRxiv pre-prints lacking both open data and open code are approximately four per cent higher than the corresponding proportions of 2019 pre-prints, suggesting that the analyzed pre-prints from 2019 may contain an overall higher prevalence of open data and code markers than pre-prints concerning COVID-19. Specifically, we found that open data availability in medRxiv pre-prints was significantly associated with a pre-pandemic registration date ($\chi$^2^ = 4.8508, p < 0.005), as was open code availability for bioRxiv pre-prints ($\chi$^2^ = 14.491, p < 0.005). This would suggest that open data and code practices may have suffered in the context of COVID-19, or that it may be something that is backfilled after posting.
+
+On the other hand, the analyzed arXiv and SocArXiv COVID-19-related pre-prints contain a higher proportion of open data and code markers overall than their 2019 counterparts, with a increase of seven per cent in sampled SocArXiv pre-prints and 18 per cent in sampled arXiv papers. For these repositories, the presence of both open data and open code markers was significantly associated with registration during the pandemic, suggesting that pre-prints related to COVID-19 in arXiv and SocArXiv may have more consistently adhered to open science practices than their pre-pandemic counterparts ($\chi$^2^ = 93.124, arXiv open data;  $\chi$^2^ = 106.88, arXiv open code; $\chi$^2^ = 12.303, SocArXiv open data; $\chi$^2^ = 8.1598, SocArXiv open code; p < 0.005).
+
+
+```{r monthly-papers-condition-stack, fig.cap = "Number of sampled pre-prints related to COVID-19 from arXiv (n = 1,000), bioRxiv (n = 1,000), medRxiv (n = 1,500), and SocArXiv (n = 478) distinguished by presence of open data or code markers", out.width="90%", fig.align = "center"}
 # Number of papers for each open data/code status per month
 open_status_med <- 
   med_open_data_results %>% 
@@ -294,9 +460,9 @@ open_status %>%
                    labels=c("Jan 2020", "Jul 2020", "Jan 2021")) +
   ylab("Number of pre-prints") +
   xlab("Month") +
-  labs(title="Sampled pre-prints by month", subtitle="Sample size from arXiv is 1,000, from bioRxiv is 1,000, from medRxiv is 1,500, and from \nSocArXiv is 410. Note the different y-axes.") +
+  labs(title="Sampled pre-prints by month", subtitle="Note the different y-axes.") +
   theme_minimal() +
-  scale_fill_manual(values = wes_palette("Darjeeling1")) +
+  scale_fill_manual(values = cbPalette) +
   facet_wrap(~repo,
              scales = "free_y")
 ```
@@ -348,7 +514,9 @@ month_sum_cov <- rbind(med_month_sum_cov, bio_month_sum_cov, arxiv_month_sum_cov
 
 ## Publication status
 
-Our metadata also contains an indication of whether a pre-print has been published, in the form of a DOI linking to the corresponding published paper. The proportion of pre-prints that have been published varies by repository (Table \@ref(tab:published-sample-summary)). Notably, of all COVID-19-related pre-prints in our dataset, approximately 30 per cent of those posted to bioRxiv and nearly one third of those posted to medRxiv were published. This is high in comparison to the proportions from arXiv and SocArXiv, and although this might suggest that COVID-19-related pre-prints in biomedical fields have received greater attention overall than pre-prints from other fields, our results in Section \@ref(pre-pandemic-pre-prints) suggest that this pattern pre-dates the pandemic.
+Our metadata also contains an indication of whether a pre-print has been published, in the form of a DOI linking to the corresponding published paper. The proportion of pre-prints that have been published varies by repository (Table \@ref(tab:published-sample-summary)). Notably, of all COVID-19-related pre-prints in our dataset, approximately 30 per cent of those posted to bioRxiv and nearly one third of those posted to medRxiv were published. This is high in comparison to the proportions from arXiv and SocArXiv, and although this might suggest that COVID-19-related pre-prints in biomedical fields have received greater attention overall than pre-prints from other fields, our results in Section \@ref(pre-pandemic-pre-prints) suggest that this pattern pre-dates the pandemic. These rates are also low in comparison to 2019 pre-prints (approximately half), which is likely a result of publication delays and the high volume of research output related to COVID-19 posted as pre-prints.
+
+<!-- Does this make sense? Should find source, check citeFraser paper -->
 
 ```{r published-sample-summary}
 med_published <- 
@@ -427,222 +595,15 @@ published_open_status$condition[published_open_status$condition == 1 & published
 published_open_status %>%
   count(repo, published, condition) %>% 
   pivot_wider(names_from = condition, values_from = n, values_fill = 0) %>%
-  mutate(Published = ifelse(published == 0, "No", "Yes"), `Proportion with neither`= round((`Neither`)/(`Open data` + `Open code` + Both + Neither), 2)) %>%
-  select(Published, Both, Neither, `Open code`, `Open data`, `Proportion with neither`) %>%
+  mutate(Status = ifelse(published == 0, "Unpublished", "Published"), `Proportion with neither`= round((`Neither`)/(`Open data` + `Open code` + Both + Neither), 2)) %>%
+  select(Status, Both, Neither, `Open code`, `Open data`, `Proportion with neither`) %>%
   kable(caption = "Counts and proportions of open data markers by whether the pre-print was published",
         booktabs = TRUE,
         format.args = list(big.mark = ",")) %>%
   group_rows(index = c("arXiv" = 2, "bioRxiv" = 2, "medRxiv" = 2, "SocArXiv" = 2))
 ```
 
-```{r open-published-stack, fig.cap= "Number of pre-prints in sample with open data or open code markers \nby publication status", out.width="90%", fig.align = "center"}
-
-# TODO: are these graphs even necessary?
-
-# published_open_status$published[published_open_status$published == 0] <- "Published"
-# published_open_status$published[published_open_status$published == 1] <- "Unpublished"
-
-# published_open_status %>% 
-#   mutate(published = ifelse(published == 0, "Unpublished", "Published")) %>%
-#   ggplot() + 
-#   geom_bar(aes(x = published, fill=factor(condition, levels = c("Neither", "Open code", "Open data", "Both")), position = "stack")) +
-#   labs(fill = "Type of marker",
-#        y = "Number of pre-prints",
-#        x = "Publication status") +
-#   ggtitle("Pre-prints by publication status") +
-#   theme_minimal() +
-#   facet_wrap(~repo) + 
-#   scale_fill_manual(values = wes_palette("Darjeeling1"))
-  
-```
-
 Our dataset likely imperfectly characterizes publication and does not have the publication details for some papers that were published. And even if it were a perfect record, there is a publication lag (estimated at an average of around 60 days for COVID-19-related pre-prints, although that varies by discipline) that may especially skew the results for pre-prints in the latter portion of our sample [@kwon2020].
-
-## Pre-pandemic pre-prints
-
-To examine the influence of the COVID-19 pandemic on open science practices during the pandemic, we analyzed pre-prints posted between January and December 2019 from each of the four repositories using the same process as was done for the COVID-19-related pre-prints. Since medRxiv was founded in June 2019, all pre-prints posted in the latter half of 2019 were analyzed (a total of 913). For all other repositories, a random sample of 1,200 was taken from all non-COVID-19-related pre-prints posted in the relevant date range.
-
-```{r 2019-results-med-arxiv, out.width="90%", fig.align='center', fig.cap = "Number of pre-prints posted per month to arXiv, bioRxiv, medRxiv, and SocArXiv in 2019"}
-bio_2019 <- bio_2019_results %>%
-  select(date) %>%
-  mutate(type = "bioRxiv")
-
-med_2019 <- med_2019_open_data_results %>%
-  select(date) %>%
-  mutate(type = "medRxiv")
-
-socarxiv_2019 <- socarxiv_metadata_2019 %>%
-  select(date_created) %>%
-  mutate(type = "socArXiv") %>%
-  rename(date = date_created)
-
-arxiv_2019 <- all_arxiv_2019_results %>%
-  select(submitted) %>%
-  mutate(type = "arXiv") %>%
-  rename(date = submitted)
-
-all_2019 <- rbind(arxiv_2019, bio_2019, med_2019, socarxiv_2019)
-
-all_2019 %>% 
-  mutate(month = floor_date(date, "month")) %>% 
-  # filter(year(date) >= 2020) %>% 
-  ggplot(aes(x = month, fill = type)) + 
-  geom_histogram(stat="count", position = "dodge2") +
-  labs(title = "Pre-prints posted per month, 2019",
-       subtitle = "Total of 150,018 pre-prints on arXiv and 31,752 on bioRxiv, 913 pre-prints on \n medRxiv and 1,614 on SocArXiv",
-       x = "Month",
-       y = "Number of pre-prints",
-       fill = "Repository") +
-  theme_minimal() +
-  scale_fill_manual(values = wes_palette("Darjeeling1")) +
-  facet_wrap(~type,
-             scales = "free_y") +
-  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
-```
-
-
-
-```{r 2019-open-results}
-just_2019_medRxiv <-
-  med_2019_open_data_results  %>%
-  mutate(date = as.Date(date), type = "medRxiv")  %>%
-  select(date, is_open_data, is_open_code, type)
-
-just_2019_bioRxiv <-
-  bio_2019_open_data_results  %>%
-  select(date, is_open_data, is_open_code) %>%
-  mutate(date = as.Date(date), type = "bioRxiv")
-
-just_2019_socarxiv <- 
-  socarxiv_2019_open_data_results %>%
-  select(date_created, is_open_data, is_open_code) %>%
-  mutate(date = as.Date(date_created), type = "socArXiv") %>%
-  select(date, is_open_data, is_open_code, type)
-
-just_2019_arxiv <-
-  arxiv_2019_open_data_results %>%
-  select(submitted, is_open_data, is_open_code) %>%
-  mutate(date = as.Date(submitted), type = "arXiv") %>%
-  select(date, is_open_data, is_open_code, type)
-
-all_2019 <- rbind(just_2019_medRxiv, just_2019_bioRxiv, just_2019_socarxiv, just_2019_arxiv)
-
-all_2019_total <- 
-  all_2019 %>%
-  count(is_open_data, is_open_code) %>%
-  mutate(prop_total = n / sum(n)) %>%
-  mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
-         is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>%
-  select(is_open_data, is_open_code, n, prop_total)
-
-all_2019_by_type <- 
-  all_2019 %>%
-  group_by(type) %>%
-  count(is_open_data, is_open_code) %>%
-  mutate(prop_total = n / sum(n)) %>%
-  mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
-         is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>%
-  ungroup() %>%
-  select(is_open_data, is_open_code, n, prop_total) 
-
-rbind(all_2019_total, all_2019_by_type) %>% 
-  kable(col.names = c("Open data markers", "Open code markers", "Count", "Proportion of total"),
-        caption = "Count and proportions of open data and code markers by pre-print repository in 2019 sample",
-        booktabs = TRUE,
-        digits = 2,
-        format.args = list(big.mark = ",")) %>%
-  group_rows(index = c("Total" = 4, "arXiv" = 4, "bioRxiv" = 4, "medRxiv" = 4, "SocArXiv" = 4))
-
-```
-
-Between June and December 2019, the number of pre-prints posted to medRxiv monthly saw an overall increase, which may be expected as the repository gained recognition and popularity in the medical research community (Figure \@ref(fig:2019-results-med-arxiv)). The number of pre-prints posted monthly to bioRxiv also saw a slight overall increase throughout 2019, while the number of those posted to arXiv and SocArXiv fluctuated throughout the year (Figure \@ref(fig:2019-results-med-arxiv)). Due to its relative immaturity at the beginning of the COVID-19 pandemic, a significant portion of medRxiv's overall usage has been dedicated to COVID-19-related research. In total, 21,647 pre-prints were posted to medRxiv between June 2019 and 30 June, 2021, 13,194 of which (approximately 61 per cent) relate to COVID-19.
-
-Of the analyzed pre-prints from 2019, 93 per cent of those posted to arXiv, 63 per cent of those posted to bioRxiv, 75 per cent of those posted to medRxiv, 92 per cent of those posted to SocArXiv showed no indication of open data or open code (Table \@ref(tab:2019-published)). Both the bioRxiv and medRxiv rates are approximately four per cent lower than the corresponding proportions of COVID-19-related pre-prints, suggesting that the analyzed pre-prints from 2019 may contain an overall higher prevalence of open data and code markers than pre-prints concerning COVID-19. Specifically, we found that open data availability in medRxiv pre-prints was significantly associated with a pre-pandemic registration date ($\chi$^2^ = 4.8508, p < 0.005), as was open code availability for bioRxiv pre-prints ($\chi$^2^ = 14.491, p < 0.005). This would suggest that open data and code practices may have suffered in the context of COVID-19. Or it may be something that is backfilled after posting.
-
-On the other hand, the analyzed arXiv and SocArXiv pre-prints from 2019 contain a lower proportion of open data and code markers overall than their COVID-19-related counterparts, with a decrease of seven per cent in sampled SocArXiv pre-prints and 18 per cent in sampled arXiv papers. For these repositories, the presence of both open data and open code markers was significantly associated with registration during the pandemic, suggesting that pre-prints related to COVID-19 in arXiv and SocArXiv may have more consistently adhered to open science practices than their pre-pandemic counterparts ($\chi$^2^ = 93.124, arXiv open data;  $\chi$^2^ = 106.88, arXiv open code; $\chi$^2^ = 12.303, SocArXiv open data; $\chi$^2^ = 8.1598, SocArXiv open code; p < 0.005).
-
-
-```{r 2019-published}
-med_published_2019 <- 
-  med_2019_open_data_results %>% 
-  select(title, date, published) %>% 
-  mutate(repo = "medRxiv", published = as.numeric(published))
-
-bio_published_2019 <- 
-  bio_2019_results %>% 
-  select(title, date, published) %>% 
-  mutate(repo = "bioRxiv", published = as.numeric(!is.na(published)))
-
-socarxiv_published_2019 <- 
-  socarxiv_metadata_2019 %>% 
-  select(title, date_created, links.doi) %>% 
-  mutate(repo = "socArXiv", published = as.numeric(!is.na(links.doi))) %>%
-  rename(date = date_created) %>%
-  select(title, date, published, repo)
-
-arxiv_published_2019 <-
-  all_arxiv_2019_results %>%
-  select(title, submitted, doi) %>%
-  mutate(repo = "arXiv", published = as.numeric(!is.na(doi))) %>%
-  rename(date = submitted) %>%
-  select(title, date, published, repo)
-
-published_2019 <- rbind(med_published_2019, bio_published_2019, socarxiv_published_2019, arxiv_published_2019)
-
-published_2019 %>% 
-  group_by(repo) %>% 
-  summarise(`Published pre-prints` = sum(published), `Proportion published` = mean(published) %>% round(2)) %>%
-  kable(caption = "Counts and proportion of published COVID-19 pre-prints in each repository, 2019",
-        col.names = c("Repositiory", "Published pre-prints", "Proportion published"),
-        format.args = list(big.mark = ","))
-```
-
-
-
-```{r, 2019-open-publishing}
-med_2019_published_open_status <- 
-  med_2019_open_data_results %>% 
-  select(title, date, published, is_open_code, is_open_data) %>% 
-  mutate(condition = is_open_data + is_open_code, repo = "medRxiv")
-
-bio_2019_published_open_status <- 
-  bio_2019_open_data_results %>% 
-  select(title, date, published, is_open_code, is_open_data) %>% 
-  mutate(condition = is_open_data + is_open_code, repo = "bioRxiv")
-
-socarxiv_2019_published_open_status <- 
-  socarxiv_2019_open_data_results %>%
-  mutate(published = !is.na(links.doi) %>% as.numeric()) %>%
-  select(title, date_created, published, is_open_code, is_open_data) %>%
-  rename(date = date_created) %>%
-  mutate(condition = is_open_data + is_open_code, repo = "socArXiv")
-
-arxiv_2019_published_open_status <- 
-  arxiv_2019_open_data_results %>%
-  mutate(published = !is.na(doi) %>% as.numeric()) %>%
-  select(title, submitted, published, is_open_code, is_open_data) %>%
-  rename(date = submitted) %>%
-  mutate(condition = is_open_data + is_open_code, repo = "arXiv")
-
-published_2019_open_status <- rbind(med_2019_published_open_status, bio_2019_published_open_status, socarxiv_2019_published_open_status, arxiv_2019_published_open_status)
-
-published_2019_open_status$condition[published_2019_open_status$condition == 2] <- "Both"
-published_2019_open_status$condition[published_2019_open_status$condition == 0] <- "Neither"
-published_2019_open_status$condition[published_2019_open_status$condition == 1 & published_2019_open_status$is_open_code == 1] <- "Open code"
-published_2019_open_status$condition[published_2019_open_status$condition == 1 & published_2019_open_status$is_open_data == 1] <- "Open data"
-
-published_2019_open_status %>%
-  count(repo, published, condition) %>% 
-  pivot_wider(names_from = condition, values_from = n, values_fill = 0) %>%
-  mutate(Published = ifelse(published == 0, "No", "Yes"), `Proportion with neither`= round((`Neither`)/(`Open data` + `Open code` + Both + Neither), 2)) %>%
-  select(Published, Both, Neither, `Open code`, `Open data`, `Proportion with neither`) %>%
-  kable(caption = "Counts and proportions of open data markers by whether the pre-print was published, 2019",
-        booktabs = TRUE,
-        format.args = list(big.mark = ",")) %>%
-  group_rows(index = c("arXiv" = 2, "bioRxiv" = 2, "medRxiv" = 2, "socArXiv" = 2))
-```
-
-Examining publication rates for pre-pandemic papers, we observe that 41 per cent of pre-prints posted to arXiv, 64 per cent of pre-prints posted to bioRxiv, 61 per cent of pre-prints posted to medRxiv, and 37 per cent of pre-prints posted to SocArXiv during 2019 were eventually peer reviewed and published (Table \@ref(tab:2019-published)). These rates are at least double those of the COVID-19-related pre-prints posted in each repository during 2020 and 2021. When disaggregated by open data and code status, we find that published and unpublished pre-prints contain open data and code markers in similar proportions (Table \@ref(tab:2019-open-publishing)). This mimics the behaviour of published and unpublished COVID-19-related pre-prints.
 
 
 # Discussion
@@ -692,7 +653,94 @@ We also recognize that this analysis relies heavily on text-based analysis which
 
 \newpage
 
-<!-- # (APPENDIX) Appendix {-}  -->
+# (APPENDIX) Appendix {-}
+
+# Tables
+
+```{r 2019-open-results, fig.pos="H"}
+just_2019_medRxiv <-
+  med_2019_open_data_results  %>%
+  mutate(date = as.Date(date), type = "medRxiv")  %>%
+  select(date, is_open_data, is_open_code, type)
+
+just_2019_bioRxiv <-
+  bio_2019_open_data_results  %>%
+  select(date, is_open_data, is_open_code) %>%
+  mutate(date = as.Date(date), type = "bioRxiv")
+
+just_2019_socarxiv <- 
+  socarxiv_2019_open_data_results %>%
+  select(date_created, is_open_data, is_open_code) %>%
+  mutate(date = as.Date(date_created), type = "socArXiv") %>%
+  select(date, is_open_data, is_open_code, type)
+
+just_2019_arxiv <-
+  arxiv_2019_open_data_results %>%
+  select(submitted, is_open_data, is_open_code) %>%
+  mutate(date = as.Date(submitted), type = "arXiv") %>%
+  select(date, is_open_data, is_open_code, type)
+
+all_2019 <- rbind(just_2019_medRxiv, just_2019_bioRxiv, just_2019_socarxiv, just_2019_arxiv)
+
+all_2019_total <- 
+  all_2019 %>%
+  count(is_open_data, is_open_code) %>%
+  mutate(prop_total = n / sum(n)) %>%
+  # mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
+  #        is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>%
+  select(is_open_data, is_open_code, n, prop_total)
+
+all_2019_by_type <- 
+  all_2019 %>%
+  group_by(type) %>%
+  count(is_open_data, is_open_code) %>%
+  mutate(prop_total = n / sum(n)) %>%
+  # mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
+  #        is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>%
+  ungroup() %>%
+  select(is_open_data, is_open_code, n, prop_total)
+
+rbind(all_2019_total, all_2019_by_type) %>% 
+  mutate(markers = case_when(is_open_data == 0 & is_open_code == 0 ~ "Neither",
+                             is_open_data == 0 & is_open_code == 1 ~ "Open code",
+                             is_open_data == 1 & is_open_code == 0 ~ "Open data",
+                             TRUE ~ "Both")) %>%
+  select(markers, n, prop_total) %>%
+  kable(col.names = c("Markers", "Count", "Proportion of total"),
+        caption = "Count and proportions of open data and code markers by pre-print repository in 2019 sample",
+        booktabs = TRUE,
+        digits = 2,
+        format.args = list(big.mark = ",")) %>%
+  group_rows(index = c("Total" = 4, "arXiv" = 4, "bioRxiv" = 4, "medRxiv" = 4, "SocArXiv" = 4))
+
+```
+
+```{r summarycounts-repositories}
+# open data/open code count summary table
+
+all_by_type <- 
+  all %>%
+  group_by(type) %>%
+  count(is_open_data, is_open_code) %>%
+  mutate(prop_total = n / sum(n)) %>%
+  # mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
+  #        is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>%
+  ungroup() %>%
+  select(is_open_data, is_open_code, n, prop_total)
+
+rbind(all_total, all_by_type) %>%
+  mutate(markers = case_when(is_open_data == 0 & is_open_code == 0 ~ "Neither",
+                             is_open_data == 0 & is_open_code == 1 ~ "Open code",
+                             is_open_data == 1 & is_open_code == 0 ~ "Open data",
+                             TRUE ~ "Both")) %>%
+  select(markers, n, prop_total) %>%
+  kable(col.names = c("Markers", "Count", "Proportion of total"),
+        caption = "Count and proportions of open data and code markers by pre-print repository",
+        booktabs = TRUE,
+        digits = 2,
+        format.args = list(big.mark = ",")) %>%
+  group_rows(index = c("Total" = 4, "arXiv" = 4, "bioRxiv" = 4, "medRxiv" = 4, "SocArXiv" = 4))
+```
 
 <!-- # Markers -->
 
@@ -705,7 +753,6 @@ We also recognize that this analysis relies heavily on text-based analysis which
 
 
 <!-- \newpage -->
-
 
 # References
 
