--- a/outputs/paper/paper.tex
+++ b/outputs/paper/paper.tex
@@ -109,7 +109,7 @@
 
 \title{Reproducibility of COVID-19 pre-prints\thanks{\textbf{Preprint:} This present manuscript is a version of a preprint by the authors (Collins and Alexander 2021). The text, tables and figures of this manuscript overlap with those of the preprint version by the authors. \textbf{Acknowledgements:} We thank Amy Farrow, Jessica Gronsbell, Monica Alexander, and Thomas William Rosenthal for helpful comments. Two anonymous reviewers and the editor provided extensive comments that substantially improved this paper and we are grateful to them. \textbf{Funding statement:} Collins thanks CANSSI Ontario and Monica Alexander for financial support. \textbf{Data accessibility statement:} Code and data are available at: \url{https://github.com/anniecollins/reproducibility_markers_in_covid19_preprints}. \textbf{Author contributions:} Collins had the original idea and wrote the first draft of the paper. Collins and Alexander obtained and created the datasets. Collins and Alexander analysed the data. All authors interpreted the data and contributed writing the paper and approved the final version.}}
 \author{Annie Collins\footnote{University of Toronto.} \and Rohan Alexander\footnote{University of Toronto, \href{mailto:rohan.alexander@utoronto.ca}{\nolinkurl{rohan.alexander@utoronto.ca}}.}}
-\date{16 December 2021}
+\date{10 January 2022}
 
 \begin{document}
 \maketitle
@@ -158,17 +158,93 @@ The result of this process is a dataset indicating the presence of open data or 
 
 Although SocArXiv's metadata contained author-reported information concerning data and code availability for each pre-print, we elected to use the results of the ODDPub algorithm in our analysis to ensure comparability of results between pre-prints from all repositories.
 
-\begin{figure}
+\begin{figure}[H]
 
 {\centering \includegraphics[width=0.9\linewidth]{paper_files/figure-latex/monthly-papers-total-1} 
 
 }
 
-\caption{Number of pre-prints related to COVID-19}\label{fig:monthly-papers-total}
+\caption{Number of pre-prints related to COVID-19 posted to arXiv (N = 4,250), bioRxiv (N = 4,146), medRxiv (N = 13,194), and SocArXiv (N = 478) per month}\label{fig:monthly-papers-total}
 \end{figure}
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
+
+\hypertarget{pre-pandemic-pre-prints}{%
+\subsection{Pre-pandemic pre-prints}\label{pre-pandemic-pre-prints}}
+
+To examine the influence of the COVID-19 pandemic on open science practices during the pandemic, we analyzed pre-prints posted between January and December 2019 from each of the four repositories in question. Since medRxiv was founded in June 2019, all pre-prints posted in the latter half of 2019 were analyzed (a total of 913). For all other repositories, a random sample of 1,200 was taken from all non-COVID-19-related pre-prints posted in the relevant date range.
+
+\begin{figure}[H]
+
+{\centering \includegraphics[width=0.9\linewidth]{paper_files/figure-latex/2019-results-med-arxiv-1} 
+
+}
+
+\caption{Number of pre-prints posted per month in 2019 to arXiv (N = 150,018), bioRxiv (N = 31,752), medRxiv (N = 913), and SocArXiv (N = 1,614) per month}\label{fig:2019-results-med-arxiv}
+\end{figure}
+
+Between June and December 2019, the number of pre-prints posted to medRxiv monthly saw an overall increase, which may be expected as the repository gained recognition and popularity in the medical research community (Figure \ref{fig:2019-results-med-arxiv}). The number of pre-prints posted monthly to bioRxiv also saw a slight overall increase throughout 2019, while the number of those posted to arXiv and SocArXiv fluctuated throughout the year (Figure \ref{fig:2019-results-med-arxiv}). Due to its relative immaturity at the beginning of the COVID-19 pandemic, a significant portion of medRxiv's overall usage has been dedicated to COVID-19-related research. In total, 21,647 pre-prints were posted to medRxiv between June 2019 and 30 June, 2021, 13,194 of which (approximately 61 per cent) relate to COVID-19.
+
+Of the analyzed pre-prints from 2019, 93 per cent of those posted to arXiv, 63 per cent of those posted to bioRxiv, 75 per cent of those posted to medRxiv, 92 per cent of those posted to SocArXiv showed no indication of open data or open code (Table \ref{tab:2019-published}).
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.9\linewidth]{paper_files/figure-latex/monthly-papers-condition-stack-2019-1} 
+
+}
+
+\caption{Number of sampled pre-prints posted in 2019 from arXiv (n = 1,200), bioRxiv (n = 1,200), medRxiv (n = 913), and SocArXiv (n = 1,200) distinguished by presence of open data or code markers}\label{fig:monthly-papers-condition-stack-2019}
+\end{figure}
+
+\begin{table}
+
+\caption{\label{tab:2019-published}Counts and proportion of published COVID-19 pre-prints in each repository, 2019}
+\centering
+\begin{tabular}[t]{l|r|r}
+\hline
+Repositiory & Published pre-prints & Proportion published\\
+\hline
+arXiv & 62,045 & 0.41\\
+\hline
+bioRxiv & 20,445 & 0.64\\
+\hline
+medRxiv & 555 & 0.61\\
+\hline
+socArXiv & 605 & 0.37\\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+
+\caption{\label{tab:2019-open-publishing}Counts and proportions of open data markers by whether the pre-print was published, 2019}
+\centering
+\begin{tabular}[t]{lrrrrr}
+\toprule
+Status & Both & Neither & Open code & Open data & Proportion with neither\\
+\midrule
+\addlinespace[0.3em]
+\multicolumn{6}{l}{\textbf{arXiv}}\\
+\hspace{1em}Unpublished & 11 & 645 & 44 & 3 & 0.92\\
+\hspace{1em}Published & 6 & 467 & 15 & 9 & 0.94\\
+\addlinespace[0.3em]
+\multicolumn{6}{l}{\textbf{bioRxiv}}\\
+\hspace{1em}Unpublished & 38 & 264 & 34 & 87 & 0.62\\
+\hspace{1em}Published & 78 & 488 & 64 & 147 & 0.63\\
+\addlinespace[0.3em]
+\multicolumn{6}{l}{\textbf{medRxiv}}\\
+\hspace{1em}Unpublished & 19 & 277 & 19 & 43 & 0.77\\
+\hspace{1em}Published & 38 & 409 & 36 & 72 & 0.74\\
+\addlinespace[0.3em]
+\multicolumn{6}{l}{\textbf{socArXiv}}\\
+\hspace{1em}Unpublished & 13 & 659 & 10 & 47 & 0.90\\
+\hspace{1em}Published & 10 & 442 & 6 & 13 & 0.94\\
+\bottomrule
+\end{tabular}
+\end{table}
+
+Examining publication rates for pre-pandemic papers, we observe that 41 per cent of pre-prints posted to arXiv, 64 per cent of pre-prints posted to bioRxiv, 61 per cent of pre-prints posted to medRxiv, and 37 per cent of pre-prints posted to SocArXiv during 2019 were eventually peer reviewed and published (Table \ref{tab:2019-published}). When disaggregated by open data and code status, we find that published and unpublished pre-prints contain open data and code markers in similar proportions (Table \ref{tab:2019-open-publishing}).
 
 \hypertarget{all-pre-prints-related-to-covid-19}{%
 \subsection{All pre-prints related to COVID-19}\label{all-pre-prints-related-to-covid-19}}
@@ -182,49 +258,11 @@ From the collection of all pre-prints related to COVID-19, we randomly sampled 3
 
 When differentiated by repository, we observe that open data and code markers were absent from 75 per cent of the sampled arXiv pre-prints, 67 per cent of the sampled bioRxiv pre-prints, 79 per cent of the sampled medRxiv pre-prints, and 85 per cent of all COVID-19-related SocArXiv pre-prints. The distribution of the remaining portion of pre-prints also varies by repository (Table \ref{tab:summarycounts-repositories}). Notably, 28 per cent of sampled pre-prints from bioRxiv contained open data markers and 22 per cent of sampled arXiv pre-prints contained markers of open code, the highest proportions of any repository for each type of marker. Our results are similar to McGuinness and Sheppard (2021), who focus on medRxiv and find that 23 per cent describe open data.
 
-\begin{table}
-
-\caption{\label{tab:summarycounts-repositories}Count and proportions of open data and code markers by pre-print repository}
-\centering
-\begin{tabular}[t]{llrr}
-\toprule
-Open data markers & Open code markers & Count & Proportion of total\\
-\midrule
-\addlinespace[0.3em]
-\multicolumn{4}{l}{\textbf{Total}}\\
-\hspace{1em}No & No & 3,011 & 0.76\\
-\hspace{1em}No & Yes & 262 & 0.07\\
-\hspace{1em}Yes & No & 391 & 0.10\\
-\hspace{1em}Yes & Yes & 314 & 0.08\\
-\addlinespace[0.3em]
-\multicolumn{4}{l}{\textbf{arXiv}}\\
-\hspace{1em}No & No & 752 & 0.75\\
-\hspace{1em}No & Yes & 115 & 0.12\\
-\hspace{1em}Yes & No & 34 & 0.03\\
-\hspace{1em}Yes & Yes & 99 & 0.10\\
-\addlinespace[0.3em]
-\multicolumn{4}{l}{\textbf{bioRxiv}}\\
-\hspace{1em}No & No & 674 & 0.67\\
-\hspace{1em}No & Yes & 44 & 0.04\\
-\hspace{1em}Yes & No & 207 & 0.21\\
-\hspace{1em}Yes & Yes & 75 & 0.07\\
-\addlinespace[0.3em]
-\multicolumn{4}{l}{\textbf{medRxiv}}\\
-\hspace{1em}No & No & 1,180 & 0.79\\
-\hspace{1em}No & Yes & 89 & 0.06\\
-\hspace{1em}Yes & No & 108 & 0.07\\
-\hspace{1em}Yes & Yes & 123 & 0.08\\
-\addlinespace[0.3em]
-\multicolumn{4}{l}{\textbf{SocArXiv}}\\
-\hspace{1em}No & No & 405 & 0.85\\
-\hspace{1em}No & Yes & 14 & 0.03\\
-\hspace{1em}Yes & No & 42 & 0.09\\
-\hspace{1em}Yes & Yes & 17 & 0.04\\
-\bottomrule
-\end{tabular}
-\end{table}
-
 The distribution of total sampled pre-prints and sampled pre-prints with open data or code markers roughly follows that of COVID-19-related pre-prints posted in general (Figure \ref{fig:monthly-papers-condition-stack}). The proportion of pre-prints with open data or code has fluctuated over time but shows no consistent overall increase or decrease throughout the course of the pandemic, nor in conjunction with increases or decreases in the total number of pre-prints posted to any given repository. In our datasets, very few (if any) pre-prints were sampled for the month of January 2020. None of these pre-prints contained open data or open code markers, thus the 0 per cent rate of open data and code for this month across all repositories should be considered an outlier.
+
+The proportion of bioRxiv and medRxiv pre-prints lacking both open data and open code are approximately four per cent higher than the corresponding proportions of 2019 pre-prints, suggesting that the analyzed pre-prints from 2019 may contain an overall higher prevalence of open data and code markers than pre-prints concerning COVID-19. Specifically, we found that open data availability in medRxiv pre-prints was significantly associated with a pre-pandemic registration date (\(\chi\)\textsuperscript{2} = 4.8508, p \textless{} 0.005), as was open code availability for bioRxiv pre-prints (\(\chi\)\textsuperscript{2} = 14.491, p \textless{} 0.005). This would suggest that open data and code practices may have suffered in the context of COVID-19, or that it may be something that is backfilled after posting.
+
+On the other hand, the analyzed arXiv and SocArXiv COVID-19-related pre-prints contain a higher proportion of open data and code markers overall than their 2019 counterparts, with a increase of seven per cent in sampled SocArXiv pre-prints and 18 per cent in sampled arXiv papers. For these repositories, the presence of both open data and open code markers was significantly associated with registration during the pandemic, suggesting that pre-prints related to COVID-19 in arXiv and SocArXiv may have more consistently adhered to open science practices than their pre-pandemic counterparts (\(\chi\)\textsuperscript{2} = 93.124, arXiv open data; \(\chi\)\textsuperscript{2} = 106.88, arXiv open code; \(\chi\)\textsuperscript{2} = 12.303, SocArXiv open data; \(\chi\)\textsuperscript{2} = 8.1598, SocArXiv open code; p \textless{} 0.005).
 
 \begin{figure}
 
@@ -232,13 +270,13 @@ The distribution of total sampled pre-prints and sampled pre-prints with open da
 
 }
 
-\caption{Number of sampled pre-prints related to COVID-19, distinguished by presence of open data or code markers}\label{fig:monthly-papers-condition-stack}
+\caption{Number of sampled pre-prints related to COVID-19 from arXiv (n = 1,000), bioRxiv (n = 1,000), medRxiv (n = 1,500), and SocArXiv (n = 478) distinguished by presence of open data or code markers}\label{fig:monthly-papers-condition-stack}
 \end{figure}
 
 \hypertarget{publication-status}{%
 \subsection{Publication status}\label{publication-status}}
 
-Our metadata also contains an indication of whether a pre-print has been published, in the form of a DOI linking to the corresponding published paper. The proportion of pre-prints that have been published varies by repository (Table \ref{tab:published-sample-summary}). Notably, of all COVID-19-related pre-prints in our dataset, approximately 30 per cent of those posted to bioRxiv and nearly one third of those posted to medRxiv were published. This is high in comparison to the proportions from arXiv and SocArXiv, and although this might suggest that COVID-19-related pre-prints in biomedical fields have received greater attention overall than pre-prints from other fields, our results in Section \ref{pre-pandemic-pre-prints} suggest that this pattern pre-dates the pandemic.
+Our metadata also contains an indication of whether a pre-print has been published, in the form of a DOI linking to the corresponding published paper. The proportion of pre-prints that have been published varies by repository (Table \ref{tab:published-sample-summary}). Notably, of all COVID-19-related pre-prints in our dataset, approximately 30 per cent of those posted to bioRxiv and nearly one third of those posted to medRxiv were published. This is high in comparison to the proportions from arXiv and SocArXiv, and although this might suggest that COVID-19-related pre-prints in biomedical fields have received greater attention overall than pre-prints from other fields, our results in Section \ref{pre-pandemic-pre-prints} suggest that this pattern pre-dates the pandemic. These rates are also low in comparison to 2019 pre-prints (approximately half), which is likely a result of publication delays and the high volume of research output related to COVID-19 posted as pre-prints.
 
 \begin{table}
 
@@ -267,140 +305,29 @@ In Table \ref{tab:open-published-summary} we disaggregate sampled pre-prints by 
 \centering
 \begin{tabular}[t]{lrrrrr}
 \toprule
-Published & Both & Neither & Open code & Open data & Proportion with neither\\
+Status & Both & Neither & Open code & Open data & Proportion with neither\\
 \midrule
 \addlinespace[0.3em]
 \multicolumn{6}{l}{\textbf{arXiv}}\\
-\hspace{1em}No & 79 & 622 & 100 & 27 & 0.75\\
-\hspace{1em}Yes & 20 & 130 & 15 & 7 & 0.76\\
+\hspace{1em}Unpublished & 79 & 622 & 100 & 27 & 0.75\\
+\hspace{1em}Published & 20 & 130 & 15 & 7 & 0.76\\
 \addlinespace[0.3em]
 \multicolumn{6}{l}{\textbf{bioRxiv}}\\
-\hspace{1em}No & 55 & 471 & 29 & 145 & 0.67\\
-\hspace{1em}Yes & 20 & 203 & 15 & 62 & 0.68\\
+\hspace{1em}Unpublished & 55 & 471 & 29 & 145 & 0.67\\
+\hspace{1em}Published & 20 & 203 & 15 & 62 & 0.68\\
 \addlinespace[0.3em]
 \multicolumn{6}{l}{\textbf{medRxiv}}\\
-\hspace{1em}No & 10 & 112 & 8 & 8 & 0.81\\
-\hspace{1em}Yes & 113 & 1,068 & 81 & 100 & 0.78\\
+\hspace{1em}Unpublished & 10 & 112 & 8 & 8 & 0.81\\
+\hspace{1em}Published & 113 & 1,068 & 81 & 100 & 0.78\\
 \addlinespace[0.3em]
 \multicolumn{6}{l}{\textbf{SocArXiv}}\\
-\hspace{1em}No & 14 & 345 & 14 & 34 & 0.85\\
-\hspace{1em}Yes & 3 & 60 & 0 & 8 & 0.85\\
+\hspace{1em}Unpublished & 14 & 345 & 14 & 34 & 0.85\\
+\hspace{1em}Published & 3 & 60 & 0 & 8 & 0.85\\
 \bottomrule
 \end{tabular}
 \end{table}
 
 Our dataset likely imperfectly characterizes publication and does not have the publication details for some papers that were published. And even if it were a perfect record, there is a publication lag (estimated at an average of around 60 days for COVID-19-related pre-prints, although that varies by discipline) that may especially skew the results for pre-prints in the latter portion of our sample (Kwon 2020).
-
-\hypertarget{pre-pandemic-pre-prints}{%
-\subsection{Pre-pandemic pre-prints}\label{pre-pandemic-pre-prints}}
-
-To examine the influence of the COVID-19 pandemic on open science practices during the pandemic, we analyzed pre-prints posted between January and December 2019 from each of the four repositories using the same process as was done for the COVID-19-related pre-prints. Since medRxiv was founded in June 2019, all pre-prints posted in the latter half of 2019 were analyzed (a total of 913). For all other repositories, a random sample of 1,200 was taken from all non-COVID-19-related pre-prints posted in the relevant date range.
-
-\begin{figure}
-
-{\centering \includegraphics[width=0.9\linewidth]{paper_files/figure-latex/2019-results-med-arxiv-1} 
-
-}
-
-\caption{Number of pre-prints posted per month to arXiv, bioRxiv, medRxiv, and SocArXiv in 2019}\label{fig:2019-results-med-arxiv}
-\end{figure}
-
-\begin{table}
-
-\caption{\label{tab:2019-open-results}Count and proportions of open data and code markers by pre-print repository in 2019 sample}
-\centering
-\begin{tabular}[t]{llrr}
-\toprule
-Open data markers & Open code markers & Count & Proportion of total\\
-\midrule
-\addlinespace[0.3em]
-\multicolumn{4}{l}{\textbf{Total}}\\
-\hspace{1em}No & No & 3,651 & 0.81\\
-\hspace{1em}No & Yes & 228 & 0.05\\
-\hspace{1em}Yes & No & 421 & 0.09\\
-\hspace{1em}Yes & Yes & 213 & 0.05\\
-\addlinespace[0.3em]
-\multicolumn{4}{l}{\textbf{arXiv}}\\
-\hspace{1em}No & No & 1,112 & 0.93\\
-\hspace{1em}No & Yes & 59 & 0.05\\
-\hspace{1em}Yes & No & 12 & 0.01\\
-\hspace{1em}Yes & Yes & 17 & 0.01\\
-\addlinespace[0.3em]
-\multicolumn{4}{l}{\textbf{bioRxiv}}\\
-\hspace{1em}No & No & 752 & 0.63\\
-\hspace{1em}No & Yes & 98 & 0.08\\
-\hspace{1em}Yes & No & 234 & 0.20\\
-\hspace{1em}Yes & Yes & 116 & 0.10\\
-\addlinespace[0.3em]
-\multicolumn{4}{l}{\textbf{medRxiv}}\\
-\hspace{1em}No & No & 686 & 0.75\\
-\hspace{1em}No & Yes & 55 & 0.06\\
-\hspace{1em}Yes & No & 115 & 0.13\\
-\hspace{1em}Yes & Yes & 57 & 0.06\\
-\addlinespace[0.3em]
-\multicolumn{4}{l}{\textbf{SocArXiv}}\\
-\hspace{1em}No & No & 1,101 & 0.92\\
-\hspace{1em}No & Yes & 16 & 0.01\\
-\hspace{1em}Yes & No & 60 & 0.05\\
-\hspace{1em}Yes & Yes & 23 & 0.02\\
-\bottomrule
-\end{tabular}
-\end{table}
-
-Between June and December 2019, the number of pre-prints posted to medRxiv monthly saw an overall increase, which may be expected as the repository gained recognition and popularity in the medical research community (Figure \ref{fig:2019-results-med-arxiv}). The number of pre-prints posted monthly to bioRxiv also saw a slight overall increase throughout 2019, while the number of those posted to arXiv and SocArXiv fluctuated throughout the year (Figure \ref{fig:2019-results-med-arxiv}). Due to its relative immaturity at the beginning of the COVID-19 pandemic, a significant portion of medRxiv's overall usage has been dedicated to COVID-19-related research. In total, 21,647 pre-prints were posted to medRxiv between June 2019 and 30 June, 2021, 13,194 of which (approximately 61 per cent) relate to COVID-19.
-
-Of the analyzed pre-prints from 2019, 93 per cent of those posted to arXiv, 63 per cent of those posted to bioRxiv, 75 per cent of those posted to medRxiv, 92 per cent of those posted to SocArXiv showed no indication of open data or open code (Table \ref{tab:2019-published}). Both the bioRxiv and medRxiv rates are approximately four per cent lower than the corresponding proportions of COVID-19-related pre-prints, suggesting that the analyzed pre-prints from 2019 may contain an overall higher prevalence of open data and code markers than pre-prints concerning COVID-19. Specifically, we found that open data availability in medRxiv pre-prints was significantly associated with a pre-pandemic registration date (\(\chi\)\textsuperscript{2} = 4.8508, p \textless{} 0.005), as was open code availability for bioRxiv pre-prints (\(\chi\)\textsuperscript{2} = 14.491, p \textless{} 0.005). This would suggest that open data and code practices may have suffered in the context of COVID-19. Or it may be something that is backfilled after posting.
-
-On the other hand, the analyzed arXiv and SocArXiv pre-prints from 2019 contain a lower proportion of open data and code markers overall than their COVID-19-related counterparts, with a decrease of seven per cent in sampled SocArXiv pre-prints and 18 per cent in sampled arXiv papers. For these repositories, the presence of both open data and open code markers was significantly associated with registration during the pandemic, suggesting that pre-prints related to COVID-19 in arXiv and SocArXiv may have more consistently adhered to open science practices than their pre-pandemic counterparts (\(\chi\)\textsuperscript{2} = 93.124, arXiv open data; \(\chi\)\textsuperscript{2} = 106.88, arXiv open code; \(\chi\)\textsuperscript{2} = 12.303, SocArXiv open data; \(\chi\)\textsuperscript{2} = 8.1598, SocArXiv open code; p \textless{} 0.005).
-
-\begin{table}
-
-\caption{\label{tab:2019-published}Counts and proportion of published COVID-19 pre-prints in each repository, 2019}
-\centering
-\begin{tabular}[t]{l|r|r}
-\hline
-Repositiory & Published pre-prints & Proportion published\\
-\hline
-arXiv & 62,045 & 0.41\\
-\hline
-bioRxiv & 20,445 & 0.64\\
-\hline
-medRxiv & 555 & 0.61\\
-\hline
-socArXiv & 605 & 0.37\\
-\hline
-\end{tabular}
-\end{table}
-
-\begin{table}
-
-\caption{\label{tab:2019-open-publishing}Counts and proportions of open data markers by whether the pre-print was published, 2019}
-\centering
-\begin{tabular}[t]{lrrrrr}
-\toprule
-Published & Both & Neither & Open code & Open data & Proportion with neither\\
-\midrule
-\addlinespace[0.3em]
-\multicolumn{6}{l}{\textbf{arXiv}}\\
-\hspace{1em}No & 11 & 645 & 44 & 3 & 0.92\\
-\hspace{1em}Yes & 6 & 467 & 15 & 9 & 0.94\\
-\addlinespace[0.3em]
-\multicolumn{6}{l}{\textbf{bioRxiv}}\\
-\hspace{1em}No & 38 & 264 & 34 & 87 & 0.62\\
-\hspace{1em}Yes & 78 & 488 & 64 & 147 & 0.63\\
-\addlinespace[0.3em]
-\multicolumn{6}{l}{\textbf{medRxiv}}\\
-\hspace{1em}No & 19 & 277 & 19 & 43 & 0.77\\
-\hspace{1em}Yes & 38 & 409 & 36 & 72 & 0.74\\
-\addlinespace[0.3em]
-\multicolumn{6}{l}{\textbf{socArXiv}}\\
-\hspace{1em}No & 13 & 659 & 10 & 47 & 0.90\\
-\hspace{1em}Yes & 10 & 442 & 6 & 13 & 0.94\\
-\bottomrule
-\end{tabular}
-\end{table}
-
-Examining publication rates for pre-pandemic papers, we observe that 41 per cent of pre-prints posted to arXiv, 64 per cent of pre-prints posted to bioRxiv, 61 per cent of pre-prints posted to medRxiv, and 37 per cent of pre-prints posted to SocArXiv during 2019 were eventually peer reviewed and published (Table \ref{tab:2019-published}). These rates are at least double those of the COVID-19-related pre-prints posted in each repository during 2020 and 2021. When disaggregated by open data and code status, we find that published and unpublished pre-prints contain open data and code markers in similar proportions (Table \ref{tab:2019-open-publishing}). This mimics the behaviour of published and unpublished COVID-19-related pre-prints.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
@@ -446,6 +373,97 @@ Our paper depends on search responses from the various repositories, which are b
 We also recognize that this analysis relies heavily on text-based analysis which was not verified directly in most cases and may lead to higher levels of uncertainty. The \texttt{oddpub} package was built to analyze biomedical publications and it may be that some of the differences that we find between repositories are due to this. In future, we wish to take smaller sub-samples to validate factors like publication status, paper topic, and open code and data status, beyond the approaches that we used here.
 
 \newpage
+
+\hypertarget{appendix-appendix}{%
+\appendix}
+
+
+\hypertarget{tables}{%
+\section{Tables}\label{tables}}
+
+\begin{table}
+
+\caption{\label{tab:2019-open-results}Count and proportions of open data and code markers by pre-print repository in 2019 sample}
+\centering
+\begin{tabular}[t]{lrr}
+\toprule
+Markers & Count & Proportion of total\\
+\midrule
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{Total}}\\
+\hspace{1em}Neither & 3,651 & 0.81\\
+\hspace{1em}Open code & 228 & 0.05\\
+\hspace{1em}Open data & 421 & 0.09\\
+\hspace{1em}Both & 213 & 0.05\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{arXiv}}\\
+\hspace{1em}Neither & 1,112 & 0.93\\
+\hspace{1em}Open code & 59 & 0.05\\
+\hspace{1em}Open data & 12 & 0.01\\
+\hspace{1em}Both & 17 & 0.01\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{bioRxiv}}\\
+\hspace{1em}Neither & 752 & 0.63\\
+\hspace{1em}Open code & 98 & 0.08\\
+\hspace{1em}Open data & 234 & 0.20\\
+\hspace{1em}Both & 116 & 0.10\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{medRxiv}}\\
+\hspace{1em}Neither & 686 & 0.75\\
+\hspace{1em}Open code & 55 & 0.06\\
+\hspace{1em}Open data & 115 & 0.13\\
+\hspace{1em}Both & 57 & 0.06\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{SocArXiv}}\\
+\hspace{1em}Neither & 1,101 & 0.92\\
+\hspace{1em}Open code & 16 & 0.01\\
+\hspace{1em}Open data & 60 & 0.05\\
+\hspace{1em}Both & 23 & 0.02\\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\begin{table}
+
+\caption{\label{tab:summarycounts-repositories}Count and proportions of open data and code markers by pre-print repository}
+\centering
+\begin{tabular}[t]{lrr}
+\toprule
+Markers & Count & Proportion of total\\
+\midrule
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{Total}}\\
+\hspace{1em}Neither & 3,011 & 0.76\\
+\hspace{1em}Open code & 262 & 0.07\\
+\hspace{1em}Open data & 391 & 0.10\\
+\hspace{1em}Both & 314 & 0.08\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{arXiv}}\\
+\hspace{1em}Neither & 752 & 0.75\\
+\hspace{1em}Open code & 115 & 0.12\\
+\hspace{1em}Open data & 34 & 0.03\\
+\hspace{1em}Both & 99 & 0.10\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{bioRxiv}}\\
+\hspace{1em}Neither & 674 & 0.67\\
+\hspace{1em}Open code & 44 & 0.04\\
+\hspace{1em}Open data & 207 & 0.21\\
+\hspace{1em}Both & 75 & 0.07\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{medRxiv}}\\
+\hspace{1em}Neither & 1,180 & 0.79\\
+\hspace{1em}Open code & 89 & 0.06\\
+\hspace{1em}Open data & 108 & 0.07\\
+\hspace{1em}Both & 123 & 0.08\\
+\addlinespace[0.3em]
+\multicolumn{3}{l}{\textbf{SocArXiv}}\\
+\hspace{1em}Neither & 405 & 0.85\\
+\hspace{1em}Open code & 14 & 0.03\\
+\hspace{1em}Open data & 42 & 0.09\\
+\hspace{1em}Both & 17 & 0.04\\
+\bottomrule
+\end{tabular}
+\end{table}
 
 \hypertarget{references}{%
 \section*{References}\label{references}}
